--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.1",
+    "framer-motion": "^11.11.11",
     "hono": "^4.4.2",
     "lucide-react": "^0.456.0",
     "next": "^14.2.3",
